--- a/desafios/desafio012/estilo/style.css
+++ b/desafios/desafio012/estilo/style.css
@@ -45,31 +45,51 @@ header > p {
 }
 
 section {
-    padding-top: 10vh;
-    padding-bottom: 10vh;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--font3);
-    font-size: 3vw;
+    font-size: 2.4vw;
+}
+
+section > p {
+    text-align: justify;
+    font-weight: bolder;
 }
 
 section.normal { 
-        background-color: white;
-        color: black;
+    background-color: white;
+    color: black;
 }
 
 section.imagem  {
     background-color: rgb(51, 51, 51);
     color: white;
-    
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     width: 400px;
-    display: ;
+    display: inline-block;
     padding:  5px;
-    background-color: black;
+    text-shadow: 1px 1px 0px black;
+    box-shadow: inset 1px 1px 0px black;
+    background-color: rgba(0, 0, 0, 0.351);
     color: white;
+}
+
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+
 }
 
 a {
